--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,106 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contact Us | White Water Rafting</title>
-<meta name="description" content="Contact White Water Rafting for more information about our services.">
-<link rel="stylesheet" href="styles/rafting.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us | White Water Rafting</title>
+    <meta name="description" content="Contact White Water Rafting for more information about our services.">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
-<div class="container">
-<div class="Header">
-<div class="Logo">
-<img src="images/logo.png" alt="White Water Rafting Logo">
-</div>
-<div class="Nav">
-<nav>
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="about.html">About Us</a></li>
-<li><a href="contact.html">Contact Us</a></li>
-<li><a href="trips.html">Trips</a></li>
-</ul>
-</nav>
-</div>
-</div>
-<div class="Hero">
-<div class="image">
-<!-- Hero image -->
-</div>
-<div class="Title">
-<h2>Experience the Thrill</h2>
-</div>
-<div class="Description">
-<p>Get ready for an unforgettable adventure!</p>
-</div>
-</div>
-<div class="Main">
-<div class="Employee image1">
-<img src="images/pinkmooler.jpg" alt="Pink Mooler>
-</div>
-<div class="Employee description 1">
-<h2>Pink Mooler</h2>
-<p>Guide</p>
-<p>Email: <a href="mailto:pinkmooler@whitewater-rafting.com">pinkmooler@whitewater-rafting.com</a></p>
-</div>
-<div class="Employee image2">
-<img src="images/raymondray.jpg" alt="Raymond Ray">
-</div>
-<div class="Employee description2">
-<h2>Raymond Ray</h2>
-<p>Manager</p>
-<p>Email: <a href="mailto:raymondray@whitewater-rafting.com">raymondray@whitewater-rafting.com</a></p>
-</div>
-<div class="Employee image3">
-<img src="images/zamancube.jpg" alt="Zama Ncube">
-</div>
-<div class="Employee description3">
-<h2>Zama Ncube</h2>
-<p>Instructor</p>
-<p>Email: <a href="mailto:zamancube@whitewater-rafting.com">zamancube@whitewater-rafting.com</a></p>
-</div>
-<div class="Map">
-<iframe src="https://www.google.com/maps/embed?..." frameborder="0" style="border:0" allowfullscreen></iframe>
-</div>
-<div class="Contact">
-<h2>Get in Touch</h2>
-<form>
-<label for="name">Name:</label>
-<input type="text" id="name" name="name">
-
-
-<label for="email">Email:</label>
-<input type="email" id="email" name="email">
-
-
-<label for="phone">Phone:</label>
-<input type="tel" id="phone" name="phone">
-
-
-<label for="message">Message:</label>
-<textarea id="message" name="message"></textarea>
-
-
-<input type="submit" value="Submit"
-</form>
-</div>
-</div>
-<div class="Footer">
-<div class="Social links">
-<ul>
-<li><a href="https://www.facebook.com"><img src="images/facebook.png" alt="Facebook"></a></li>
-<li><a href="https://www.twitter.com"><img src="images/twitter.png" alt="Twitter"></a></li>
-<li><a href="https://www.whatsapp.com"><img src="images/whatsapp.png" alt="WhatsApp"></a></li>
-</ul>
-</div>
-<div class="Wireframe link">
-<p><a href="https://app.moqups.com/zas3SBWG4AjvVTOXv23FFExPGafWNPbn/edit/page/ad64222d5>View Wireframe</a></p>
-</div>
-<div class="Copyright">
-<p>&copy; 2023 White Water Rafting</p>
-</div>
-</div>
+    <div class="container">
+        <div class="Header">
+            <div class="Logo">
+                <img src="images/logo.png" alt="White Water Rafting Logo">
+            </div>
+            <div class="Nav">
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="trips.html">Trips</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="Hero">
+            <div class="image">
+                <!-- Hero image -->
+            </div>
+            <div class="Title">
+                <h2>Experience the Thrill</h2>
+            </div>
+            <div class="Description">
+                <p>Get ready for an unforgettable adventure!</p>
+            </div>
+        </div>
+        <div class="Main">
+            <div class="Employee">
+                <img src="images/pinkmooler.jpg" alt="Pink Mooler">
+            </div>
+            <div class="Employee description">
+                <h2>Pink Mooler</h2>
+                <p>Guide</p>
+                <p>Email: <a href="mailto:pinkmooler@whitewater-rafting.com">pinkmooler@whitewater-rafting.com</a></p>
+            </div>
+            <div class="Employee">
+                <img src="images/raymondray.jpg" alt="Raymond Ray">
+            </div>
+            <div class="Employee description">
+                <h2>Raymond Ray</h2>
+                <p>Manager</p>
+                <p>Email: <a href="mailto:raymondray@whitewater-rafting.com">raymondray@whitewater-rafting.com</a></p>
+            </div>
+            <div class="Employee">
+                <img src="images/zamancube.jpg" alt="Zama Ncube">
+            </div>
+            <div class="Employee description">
+                <h2>Zama Ncube</h2>
+                <p>Instructor</p>
+                <p>Email: <a href="mailto:zamancube@whitewater-rafting.com">zamancube@whitewater-rafting.com</a></p>
+            </div>
+            <div class="Map">
+                <iframe src="https://www.google.com/maps/embed?..." frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+            <div class="Contact">
+                <h2>Get in Touch</h2>
+                <form>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email">
+                    <label for="phone">Phone:</label>
+                    <input type="tel" id="phone" name="phone">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message"></textarea>
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+        </div>
+        <div class="Footer">
+            <div class="Social links">
+                <ul>
+                    <li><a href="https://www.facebook.com"><img src="images/facebook.png" alt="Facebook"></a></li>
+                    <li><a href="https://www.twitter.com"><img src="images/twitter.png" alt="Twitter"></a></li>
+                    <li><a href="https://www.whatsapp.com"><img src="images/whatsapp.png" alt="WhatsApp"></a></li>
+                </ul>
+            </div>
+            <div class="Wireframe link">
+              <p><a href="https://app.moqups.com/zas3SBWG4AjvVTOXv23FFExPGafWNPbn/edit/page/ad64222d5">View Wireframe</a></p>
+        </div>
+        <div class="Copyright">
+            <p>&copy; 2023 White Water Rafting</p>
+        </div>
+    </div>
 </div>
 </body>
 </html>
+
