--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -61,7 +61,7 @@
                 <p>Email: <a href="mailto:zamancube@whitewater-rafting.com">zamancube@whitewater-rafting.com</a></p>
             </div>
             <div class="Map">
-                <iframe src="https://www.google.com/maps/embed?..." frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?..." ></iframe>
             </div>
             <div class="Contact">
                 <h2>Get in Touch</h2>
