--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="Header">
-            <div class="Logo">
+        <div class="header">
+            <div class="logo">
                 <img src="images/logo.png" alt="White Water Rafting Logo">
             </div>
-            <div class="Nav">
+            <div class="nav">
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -24,46 +24,46 @@
                 </nav>
             </div>
         </div>
-        <div class="Hero">
+        <div class="hero">
             <div class="image">
                 <!-- Hero image -->
             </div>
-            <div class="Title">
+            <div class="title">
                 <h2>Experience the Thrill</h2>
             </div>
-            <div class="Description">
+            <div class="description">
                 <p>Get ready for an unforgettable adventure!</p>
             </div>
         </div>
-        <div class="Main">
-            <div class="Employee">
+        <div class="main">
+            <div class="employee">
                 <img src="images/pinkmooler.jpg" alt="Pink Mooler">
             </div>
-            <div class="Employee description">
+            <div class="employee description">
                 <h2>Pink Mooler</h2>
                 <p>Guide</p>
                 <p>Email: <a href="mailto:pinkmooler@whitewater-rafting.com">pinkmooler@whitewater-rafting.com</a></p>
             </div>
-            <div class="Employee">
+            <div class="employee">
                 <img src="images/raymondray.jpg" alt="Raymond Ray">
             </div>
-            <div class="Employee description">
+            <div class="employee description">
                 <h2>Raymond Ray</h2>
                 <p>Manager</p>
                 <p>Email: <a href="mailto:raymondray@whitewater-rafting.com">raymondray@whitewater-rafting.com</a></p>
             </div>
-            <div class="Employee">
+            <div class="employee">
                 <img src="images/zamancube.jpg" alt="Zama Ncube">
             </div>
-            <div class="Employee description">
+            <div class="employee description">
                 <h2>Zama Ncube</h2>
                 <p>Instructor</p>
                 <p>Email: <a href="mailto:zamancube@whitewater-rafting.com">zamancube@whitewater-rafting.com</a></p>
             </div>
-            <div class="Map">
+            <div class="map">
                 <iframe src="https://www.google.com/maps/embed?..." ></iframe>
             </div>
-            <div class="Contact">
+            <div class="contact">
                 <h2>Get in Touch</h2>
                 <form>
                     <label for="name">Name:</label>
@@ -78,18 +78,18 @@
                 </form>
             </div>
         </div>
-        <div class="Footer">
-            <div class="Social links">
+        <div class="footer">
+            <div class="social links">
                 <ul>
                     <li><a href="https://www.facebook.com"><img src="images/facebook.png" alt="Facebook"></a></li>
                     <li><a href="https://www.twitter.com"><img src="images/twitter.png" alt="Twitter"></a></li>
                     <li><a href="https://www.whatsapp.com"><img src="images/whatsapp.png" alt="WhatsApp"></a></li>
                 </ul>
             </div>
-            <div class="Wireframe link">
+            <div class="wireframe link">
               <p><a href="https://app.moqups.com/zas3SBWG4AjvVTOXv23FFExPGafWNPbn/edit/page/ad64222d5">View Wireframe</a></p>
         </div>
-        <div class="Copyright">
+        <div class="copyright">
             <p>&copy; 2023 White Water Rafting</p>
         </div>
     </div>
