--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -100,7 +100,7 @@
 </ul>
 </div>
 <div class="wireframe-link">
-<p><a href="https://app.moqups.com/zas3SBWG4AjvVTOXv23FFExPGafWNPbn/edit/page/ad64222d5">View Wireframe</a></p>
+<p><a href="https://app.moqups.com/zas3SBWG4AjvVTOXv23FFExPGafWNPbn/view?fit_width=1">View Wireframe</a></p>
 </div>
 <div class="copyright ">
 <p>&copy; 2025 White Water Rafting. All rights reserved.</p>
