--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -76,7 +76,7 @@
 <label for="message">Message:</label>
 <textarea id="message" name="message"></textarea>
 <button type="submit" id="submit-button">Send Message</button>
-<label for="trip-type">Trip Type:</label>
+<label for=" `<input type="radio"id="trip-type" name="trip-type" value="option1">` ">Trip Type:</label>
 <input type="radio" id="trip-type-1" name="trip-type" value="option1">
 <label for="trip-type-1">Option 1</label>
 <input type="radio" id="trip-type-2" name="trip-type" value="option2">
@@ -85,7 +85,7 @@
 <label for="trip-type-3">Option 3</label>
 <label for="newsletter">Subscribe to Newsletter:</label>
 <input type="checkbox" id="newsletter" name="newsletter" value="yes">
-<button type="submit" id="submit-button">Send Message</button>
+<button type="submit" id="submit-button2">Send Message</button>
 </form>
 </div>
 </div>
@@ -117,6 +117,6 @@
 </div>
 </div>
 </div>
-</div>
+</footer>
 </body>
 </html>
