--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -76,13 +76,15 @@
 <label for="message">Message:</label>
 <textarea id="message" name="message"></textarea>
 <button type="submit" id="submit-button">Send Message</button>
-<label for=" `<input type="radio"id="trip-type" name="trip-type" value="option1">` ">Trip Type:</label>
+<fieldset>
+<legend>Trip Type:</legend>
 <input type="radio" id="trip-type-1" name="trip-type" value="option1">
 <label for="trip-type-1">Option 1</label>
 <input type="radio" id="trip-type-2" name="trip-type" value="option2">
 <label for="trip-type-2">Option 2</label>
 <input type="radio" id="trip-type-3" name="trip-type" value="option3">
 <label for="trip-type-3">Option 3</label>
+</fieldset>
 <label for="newsletter">Subscribe to Newsletter:</label>
 <input type="checkbox" id="newsletter" name="newsletter" value="yes">
 <button type="submit" id="submit-button2">Send Message</button>
