--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -1,1 +1,125 @@
 
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<title>Contact Us | White Water Rafting</title>
+<meta name="description" content="Contact White Water Rafting for more information about our services.">
+<meta name="author" content="Happiness Ncube">
+<link rel="stylesheet" href="styles/rafting.css">
+</head>
+<body>
+<header>
+<div class="header">
+<div class="logo">
+<img src="images/logo.png" alt="White Water Rafting Logo">
+</div>
+<div class="nav">
+<nav>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="about.html">About Us</a></li>
+<li><a href="contact.html">Contact Us</a></li>
+<li><a href="trips.html">Trips</a></li>
+</ul>
+</nav>
+</div>
+</div>
+</header>
+<main>
+<h1>Contact Us</h1>
+<div class="hero">
+<div class="title">
+<h2>Experience the Thrill</h2>
+</div>
+<div class="description">
+<p>Get ready for an unforgettable adventure!</p>
+</div>
+</div>
+<div class="main">
+<div class="employee">
+<img src="images/pinkmooler.jpg" alt="Pink Mooler" id="pinkmooler">
+</div>
+<div class="employee description">
+<h2>Pink Mooler</h2>
+<p>Guide</p>
+<p>Email: <a href="mailto:pinkmooler@whitewater-rafting.com" id="pinkmooler-email">pinkmooler@whitewater-rafting.com</a></p>
+</div>
+<div class="employee">
+<img src="images/raymondray.jpg" alt="Raymond Ray" id="raymondray">
+</div>
+<div class="employee description">
+<h2>Raymond Ray</h2>
+<p>Manager</p>
+<p>Email: <a href="mailto:raymondray@whitewater-rafting.com" id="raymondray-email">raymondray@whitewater-rafting.com</a></p>
+</div>
+<div class="employee">
+<img src="images/zamancube.jpg" alt="Zama Ncube" id="zamancube">
+</div>
+<div class="employee description">
+<h2>Zama Ncube</h2>
+<p>Instructor</p>
+<p>Email: <a href="mailto:zamancube@whitewater-rafting.com" id="zamancube-email">zamancube@whitewater-rafting.com</a></p>
+</div>
+<div class="map">
+<iframe src="https://www.google.com/maps/embed" id="map-iframe"></iframe>
+</div>
+<div class="contact">
+<h2>Get in Touch</h2>
+<form>
+<label for="name">Name:</label>
+<input type="text" id="name" name="name">
+<label for="email">Email:</label>
+<input type="email" id="email" name="email">
+<label for="phone">Phone:</label>
+<input type="tel" id="phone" name="phone">
+<label for="message">Message:</label>
+<textarea id="message" name="message"></textarea>
+<button type="submit" id="submit-button">Send Message</button>
+<fieldset>
+<legend>Trip Type:</legend>
+<input type="radio" id="trip-type-1" name="trip-type" value="option1">
+<label for="trip-type-1">Option 1</label>
+<input type="radio" id="trip-type-2" name="trip-type" value="option2">
+<label for="trip-type-2">Option 2</label>
+<input type="radio" id="trip-type-3" name="trip-type" value="option3">
+<label for="trip-type-3">Option 3</label>
+</fieldset>
+<label for="newsletter">Subscribe to Newsletter:</label>
+<input type="checkbox" id="newsletter" name="newsletter" value="yes">
+<button type="submit" id="submit-button2">Send Message</button>
+</form>
+</div>
+</div>
+</main>
+<footer>
+<div class="footer">
+<div class="social-links">
+<ul>
+<li><a href="https://www.facebook.com"><img src="images/facebook.png" alt="Facebook"></a></li>
+<li><a href="https://www.twitter.com"><img src="images/twitter.png" alt="Twitter"></a></li>
+<li><a href="https://www.whatsapp.com"><img src="images/whatsapp.png" alt="WhatsApp"></a></li>
+</ul>
+</div>
+<div class="wireframe-link">
+<p><a href="https://app.moqups.com/zas3SBWG4AjvVTOXv23FFExPGafWNPbn/view?fit_width=1">View Wireframe</a></p>
+</div>
+<div class="copyright ">
+<p>&copy; 2025 White Water Rafting. All rights reserved.</p>
+<div class="contact-info">
+<p>White Water Rafting</p>
+<p>123 Main St, Anytown, USA 12345</p>
+<p>Phone: 555-555-5555</p>
+<p>Email: <a href="mailto:info@whitewater-rafting.com">info@whitewater-rafting.com</a></p>
+<p>Follow us on social media:</p>
+<ul>
+<li><a href="www.facebook.com ">Facebook</a></li>
+<li><a href="www.twitter.com">Twitter</a></li>
+</ul>
+</div>
+</div>
+</div>
+</footer>
+</body>
+</html>
