--- a/wwr/index.html
+++ b/wwr/index.html
@@ -27,70 +27,49 @@
 </div>
 </header>
 <main>
-<h1>Contact Us</h1>
-<div class="hero">
-<div class="title">
-<h2>Experience the Thrill</h2>
+<section class="hero">
+<img src="images/hero.jpg" alt="Hero Image">
+<h1>Welcome to White Water Rafting</h1>
+</section>
+<section class="about-us">
+<h2>About Us</h2>
+<p>We are a team of experienced rafting guides dedicated to providing safe and exciting rafting trips.</p>
+<p>Our goal is to create unforgettable experiences for our customers.</p>
+</section>
+<section class="featured-trips">
+<h2>Featured Trips</h2>
+<div class="trip">
+<img src="images/trip1.jpg" alt="Trip 1">
+<h3>Lower Canyon Trip</h3>
+<p>A scenic and relaxing trip through the lower canyon.</p>
+<p>Duration: 2 hours</p>
+<p>Difficulty: Easy</p>
+<p>Price: $50/person</p>
+<button>Book Now</button>
 </div>
-<div class="description">
-<p>Get ready for an unforgettable adventure!</p>
+<div class="trip">
+<img src="images/trip2.jpg" alt="Trip 2">
+<h3>Upper Canyon Trip</h3>
+<p>An exciting and challenging trip through the upper canyon.</p>
+<p>Duration: 4 hours</p>
+<p>Difficulty: Moderate</p>
+<p>Price: $100/person</p>
+<button>Book Now</button>
 </div>
-</div>
-<div class="main">
-<div class="employee">
-<img src="images/pinkmooler.jpg" alt="Pink Mooler" id="pinkmooler">
-</div>
-<div class="employee description">
-<h2>Pink Mooler</h2>
-<p>Guide</p>
-<p>Email: <a href="mailto:pinkmooler@whitewater-rafting.com" id="pinkmooler-email">pinkmooler@whitewater-rafting.com</a></p>
-</div>
-<div class="employee">
-<img src="images/raymondray.jpg" alt="Raymond Ray" id="raymondray">
-</div>
-<div class="employee description">
-<h2>Raymond Ray</h2>
-<p>Manager</p>
-<p>Email: <a href="mailto:raymondray@whitewater-rafting.com" id="raymondray-email">raymondray@whitewater-rafting.com</a></p>
-</div>
-<div class="employee">
-<img src="images/zamancube.jpg" alt="Zama Ncube" id="zamancube">
-</div>
-<div class="employee description">
-<h2>Zama Ncube</h2>
-<p>Instructor</p>
-<p>Email: <a href="mailto:zamancube@whitewater-rafting.com" id="zamancube-email">zamancube@whitewater-rafting.com</a></p>
-</div>
-<div class="map">
-<iframe src="https://www.google.com/maps/embed" id="map-iframe"></iframe>
-</div>
-<div class="contact">
-<h2>Get in Touch</h2>
+</section>
+<section class="call-to-action">
+<a href="wwr/trips.html">Explore Our Trips</a>
+</section>
+<section class="newsletter">
+<h2>Sign up for our Newsletter</h2>
 <form>
 <label for="name">Name:</label>
-<input type="text" id="name" name="name">
+<input type="text" id="name" name="name"><br><br>
 <label for="email">Email:</label>
-<input type="email" id="email" name="email">
-<label for="phone">Phone:</label>
-<input type="tel" id="phone" name="phone">
-<label for="message">Message:</label>
-<textarea id="message" name="message"></textarea>
-<button type="submit" id="submit-button">Send Message</button>
-<fieldset>
-<legend>Trip Type:</legend>
-<input type="radio" id="trip-type-1" name="trip-type" value="option1">
-<label for="trip-type-1">Option 1</label>
-<input type="radio" id="trip-type-2" name="trip-type" value="option2">
-<label for="trip-type-2">Option 2</label>
-<input type="radio" id="trip-type-3" name="trip-type" value="option3">
-<label for="trip-type-3">Option 3</label>
-</fieldset>
-<label for="newsletter">Subscribe to Newsletter:</label>
-<input type="checkbox" id="newsletter" name="newsletter" value="yes">
-<button type="submit" id="submit-button2">Send Message</button>
+<input type="email" id="email" name="email"><br><br>
+<input type="submit" value="Sign up">
 </form>
-</div>
-</div>
+</section>
 </main>
 <footer>
 <div class="footer">
@@ -121,4 +100,4 @@
 </div>
 </footer>
 </body>
-  </html>
+</html>
