--- a/wwr/index.html
+++ b/wwr/index.html
@@ -58,6 +58,7 @@
 </div>
 </section>
 <section class="call-to-action">
+<h2>Ready for an Adventure?</h2>
 <a href="wwr/trips.html">Explore Our Trips</a>
 </section>
 <section class="newsletter">
