--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Contact Us | White Water Rafting</title>
-<meta name="description" content="Contact White Water Rafting for more information about our services.">
+<title>Home | White Water Rafting</title>
+<meta name="description" content="Discover the beauty and excitement of white water rafting with our guided tours. Suitable for all skill levels, book your trip now and start planning your next adventure!">
 <meta name="author" content="Happiness Ncube">
 <link rel="stylesheet" href="styles/rafting.css">
 </head>
