--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Contact Us | White Water Rafting</title>
-<meta name="description" content="Contact White Water Rafting for more information about our services.">
+<title>White Water Rafting Expeditions & Tours"</title>
+<meta name="description" content="Join us on an unforgettable white water rafting expedition or tour. Our expert guides will navigate you through breathtaking scenery and thrilling rapids. Book your trip now!">
 <meta name="author" content="Happiness Ncube">
 <link rel="stylesheet" href="styles/rafting.css">
 </head>
